Test Cases/DISNEY/NEGATIVE_TEST/D2_CX.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>D2_CX</name>
   <tag></tag>
   <comment></comment>
   <recordOption>OTHER</recordOption>
   <testCaseGuid>1409ff09-893e-471d-9b2b-13a739e0b509</testCaseGuid>
</TestCaseEntity>
